switch to pi4 Docker image

--- a/eufy-security/Dockerfile
+++ b/eufy-security/Dockerfile
@@ -1,2 +1,2 @@
-FROM ghcr.io/evilmarty/eufy-security-mqtt:latest
+FROM nkm8/eufy-security-mqtt:pi4-latest
 CMD ["--hassio", "--config", "/data/options.json"]
