--- a/eufy-security/config.json
+++ b/eufy-security/config.json
@@ -1,10 +1,10 @@
 {
   "name": "Eufy Security",
   "version": "0.3.1",
-  "slug": "eufy-security",
+  "slug": "eufy-security-new",
   "description": "Eufy Security to MQTT Gateway intended for use with Home Assistant or other platforms that use the MQTT discovery mechanism.",
   "url": "https://github.com/nkm8/hassio-addons/tree/master/eufy-security",
-  "image": "FROM nkm8/eufy-security-mqtt:pi4-latest",
+  "image": "nkm8/eufy-security-mqtt:pi4-latest",
   "arch": [
     "amd64",
     "aarch64",
