--- a/eufy-security/config.json
+++ b/eufy-security/config.json
@@ -1,7 +1,7 @@
 {
   "name": "Eufy Security",
   "version": "0.3.1",
-  "slug": "eufy-security-new",
+  "slug": "eufy-security",
   "description": "Eufy Security to MQTT Gateway intended for use with Home Assistant or other platforms that use the MQTT discovery mechanism.",
   "url": "https://github.com/nkm8/hassio-addons/tree/master/eufy-security",
   "image": "nkm8/eufy-security-mqtt:pi4-latest",
