--- a/lidarr/config.json
+++ b/lidarr/config.json
@@ -3,8 +3,8 @@
   "version": "0.8.1.2135-ls62",
   "slug": "lidarr",
   "description": "Lidarr is a music collection manager for Usenet and BitTorrent users.",
-  "url": "https://github.com/evilmarty/hassio-addons/tree/master/lidarr",
-  "image": "ghcr.io/evilmarty/hassio-lidarr",
+  "url": "https://github.com/nkm8/hassio-addons/tree/master/lidarr",
+  "image": "ghcr.io/nkm8/hassio-lidarr",
   "arch": [
     "amd64",
     "aarch64",
